testsuite/tests/ghc-regress/typecheck/should_fail/tcfail006.hs
module ShouldFail where

(j,k) = case (if True then True else False) of
         True -> (True,1)
         False -> (1,True)
